Assignment1/parser.output
Grammar

    0 $accept: start $end

    1 start: program SCANEOF

    2 program: BEGIN_ statement_list END

    3 statement_list: statement
    4               | statement_list statement

    5 statement: ID ASSIGNOP expression SEMICOLON
    6          | READ LPAREN id_list RPAREN SEMICOLON
    7          | WRITE LPAREN expr_list RPAREN SEMICOLON

    8 id_list: ID
    9        | id_list COMMA ID

   10 expr_list: expression
   11          | expr_list COMMA expression

   12 expression: primary
   13           | expression PLUSOP primary
   14           | expression MINUSOP primary

   15 primary: LPAREN expression RPAREN
   16        | ID
   17        | INTLITERAL


Terminals, with rules where they appear

$end (0) 0
error (256)
BEGIN_ (258) 2
END (259) 2
READ (260) 6
WRITE (261) 7
LPAREN (262) 6 7 15
RPAREN (263) 6 7 15
SEMICOLON (264) 5 6 7
COMMA (265) 9 11
ASSIGNOP (266) 5
SCANEOF (267) 1
MINUSOP (268) 14
PLUSOP (269) 13
ID (270) 5 8 9 16
INTLITERAL (271) 17


Nonterminals, with rules where they appear

$accept (17)
    on left: 0
start (18)
    on left: 1, on right: 0
program (19)
    on left: 2, on right: 1
statement_list (20)
    on left: 3 4, on right: 2 4
statement (21)
    on left: 5 6 7, on right: 3 4
id_list (22)
    on left: 8 9, on right: 6 9
expr_list (23)
    on left: 10 11, on right: 7 11
expression (24)
    on left: 12 13 14, on right: 5 10 11 13 14 15
primary (25)
    on left: 15 16 17, on right: 12 13 14


state 0

    0 $accept: . start $end

    BEGIN_  shift, and go to state 1

    start    go to state 2
    program  go to state 3


state 1

    2 program: BEGIN_ . statement_list END

    READ   shift, and go to state 4
    WRITE  shift, and go to state 5
    ID     shift, and go to state 6

    statement_list  go to state 7
    statement       go to state 8


state 2

    0 $accept: start . $end

    $end  shift, and go to state 9


state 3

    1 start: program . SCANEOF

    SCANEOF  shift, and go to state 10


state 4

    6 statement: READ . LPAREN id_list RPAREN SEMICOLON

    LPAREN  shift, and go to state 11


state 5

    7 statement: WRITE . LPAREN expr_list RPAREN SEMICOLON

    LPAREN  shift, and go to state 12


state 6

    5 statement: ID . ASSIGNOP expression SEMICOLON

    ASSIGNOP  shift, and go to state 13


state 7

    2 program: BEGIN_ statement_list . END
    4 statement_list: statement_list . statement

    END    shift, and go to state 14
    READ   shift, and go to state 4
    WRITE  shift, and go to state 5
    ID     shift, and go to state 6

    statement  go to state 15


state 8

    3 statement_list: statement .

    $default  reduce using rule 3 (statement_list)


state 9

    0 $accept: start $end .

    $default  accept


state 10

    1 start: program SCANEOF .

    $default  reduce using rule 1 (start)


state 11

    6 statement: READ LPAREN . id_list RPAREN SEMICOLON

    ID  shift, and go to state 16

    id_list  go to state 17


state 12

    7 statement: WRITE LPAREN . expr_list RPAREN SEMICOLON

    LPAREN      shift, and go to state 18
    ID          shift, and go to state 19
    INTLITERAL  shift, and go to state 20

    expr_list   go to state 21
    expression  go to state 22
    primary     go to state 23


state 13

    5 statement: ID ASSIGNOP . expression SEMICOLON

    LPAREN      shift, and go to state 18
    ID          shift, and go to state 19
    INTLITERAL  shift, and go to state 20

    expression  go to state 24
    primary     go to state 23


state 14

    2 program: BEGIN_ statement_list END .

    $default  reduce using rule 2 (program)


state 15

    4 statement_list: statement_list statement .

    $default  reduce using rule 4 (statement_list)


state 16

    8 id_list: ID .

    $default  reduce using rule 8 (id_list)


state 17

    6 statement: READ LPAREN id_list . RPAREN SEMICOLON
    9 id_list: id_list . COMMA ID

    RPAREN  shift, and go to state 25
    COMMA   shift, and go to state 26


state 18

   15 primary: LPAREN . expression RPAREN

    LPAREN      shift, and go to state 18
    ID          shift, and go to state 19
    INTLITERAL  shift, and go to state 20

    expression  go to state 27
    primary     go to state 23


state 19

   16 primary: ID .

    $default  reduce using rule 16 (primary)


state 20

   17 primary: INTLITERAL .

    $default  reduce using rule 17 (primary)


state 21

    7 statement: WRITE LPAREN expr_list . RPAREN SEMICOLON
   11 expr_list: expr_list . COMMA expression

    RPAREN  shift, and go to state 28
    COMMA   shift, and go to state 29


state 22

   10 expr_list: expression .
   13 expression: expression . PLUSOP primary
   14           | expression . MINUSOP primary

    MINUSOP  shift, and go to state 30
    PLUSOP   shift, and go to state 31

    $default  reduce using rule 10 (expr_list)


state 23

   12 expression: primary .

    $default  reduce using rule 12 (expression)


state 24

    5 statement: ID ASSIGNOP expression . SEMICOLON
   13 expression: expression . PLUSOP primary
   14           | expression . MINUSOP primary

    SEMICOLON  shift, and go to state 32
    MINUSOP    shift, and go to state 30
    PLUSOP     shift, and go to state 31


state 25

    6 statement: READ LPAREN id_list RPAREN . SEMICOLON

    SEMICOLON  shift, and go to state 33


state 26

    9 id_list: id_list COMMA . ID

    ID  shift, and go to state 34


state 27

   13 expression: expression . PLUSOP primary
   14           | expression . MINUSOP primary
   15 primary: LPAREN expression . RPAREN

    RPAREN   shift, and go to state 35
    MINUSOP  shift, and go to state 30
    PLUSOP   shift, and go to state 31


state 28

    7 statement: WRITE LPAREN expr_list RPAREN . SEMICOLON

    SEMICOLON  shift, and go to state 36


state 29

   11 expr_list: expr_list COMMA . expression

    LPAREN      shift, and go to state 18
    ID          shift, and go to state 19
    INTLITERAL  shift, and go to state 20

    expression  go to state 37
    primary     go to state 23


state 30

   14 expression: expression MINUSOP . primary

    LPAREN      shift, and go to state 18
    ID          shift, and go to state 19
    INTLITERAL  shift, and go to state 20

    primary  go to state 38


state 31

   13 expression: expression PLUSOP . primary

    LPAREN      shift, and go to state 18
    ID          shift, and go to state 19
    INTLITERAL  shift, and go to state 20

    primary  go to state 39


state 32

    5 statement: ID ASSIGNOP expression SEMICOLON .

    $default  reduce using rule 5 (statement)


state 33

    6 statement: READ LPAREN id_list RPAREN SEMICOLON .

    $default  reduce using rule 6 (statement)


state 34

    9 id_list: id_list COMMA ID .

    $default  reduce using rule 9 (id_list)


state 35

   15 primary: LPAREN expression RPAREN .

    $default  reduce using rule 15 (primary)


state 36

    7 statement: WRITE LPAREN expr_list RPAREN SEMICOLON .

    $default  reduce using rule 7 (statement)


state 37

   11 expr_list: expr_list COMMA expression .
   13 expression: expression . PLUSOP primary
   14           | expression . MINUSOP primary

    MINUSOP  shift, and go to state 30
    PLUSOP   shift, and go to state 31

    $default  reduce using rule 11 (expr_list)


state 38

   14 expression: expression MINUSOP primary .

    $default  reduce using rule 14 (expression)


state 39

   13 expression: expression PLUSOP primary .

    $default  reduce using rule 13 (expression)
